--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="google-site-verification" content="nVC1ZK_OXBDtNWzPVNfUAl6SRn8okmJ0eU33gGZFpeU" />
     <title>Youtube Broadcasting</title>
 		<script src="https://code.jquery.com/jquery-3.4.1.js"></script>  
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i|Roboto:500" rel="stylesheet">
