added page for add google credentials

--- a/home.html
+++ b/home.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="src/css/custom.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	<script src="https://apis.google.com/js/api.js"></script>
-	<script src="src/js/yt.js"></script>
-
+    <script src="src/js/yt.js"></script>
 </head>
 <body class="is-boxed has-animations">
     <div class="body-wrap boxed-container">
@@ -21,6 +20,7 @@
             <section class="hero text-center">
                 <div class="container-sm">
                     <div class="hero-inner">
+                        <span id="changeGoogleCrenditials">Change Google App Credentials</span>
                         <h1 class="hero-title h2-mobile mt-0 is-revealing">Youtube Broadcast</h1>
                         <p class="hero-paragraph is-revealing">Click below button to authenticate with Google and fetch all your broadcast videos.</p>
                         <div class="hero-form newsletter-form field field-grouped is-revealing">
